# CandCPPtest

./: README.md
00_helloQt/: 00_helloQt.pro  mainwindow.cpp  mainwindow.h
00_hello_C/: CMakeLists.txt
01_mainWindowQt/: mainwindow.cpp  mainwindow.h
01_qtButton/: 01_qtButton.pro  mainwindow.cpp  mainwindow.h
02_namespaceCPP/: main.cpp
02_qtButton/: 02_qtButton.pro  mainwindow.cpp  mainwindow.h  mainwindow2.cpp  mainwindow2.h  mainwindow3.cpp  mainwindow3.h  mainwindow4.cpp  mainwindow4.h  mainwindow4.ui  tabwidget.cpp  tabwidget.h  tabwidget.ui
03_qtCombo/: 03_qtCombo.pro  mainwindow.cpp  mainwindow.h
04_Login/: 04_Login.pro  login.cpp  login.h
05_qtCombo2/: 05_qtCombo2.pro  mainwindow.cpp  mainwindow.h
06_fileManagement/: mainwindow.cpp  mainwindow.h
07_qtFileManagement/: 07_qtFileManagement.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow2.cpp  mainwindow2.h  mainwindow3.cpp  mainwindow3.h  mainwindow3.ui  mainwindow4.cpp  mainwindow4.h
08_qtPicture/: mainwindow.cpp  mainwindow.h
build-01_qtButton-aarch64_qt-Debug/: .qmake.stash  01_qtButton  Makefile  moc_mainwindow.cpp  moc_predefs.h
build-02_qtButton-aarch64_qt-Debug/: 02_qtButton  Makefile  moc_mainwindow.cpp  moc_mainwindow2.cpp  moc_mainwindow3.cpp  moc_mainwindow4.cpp  moc_tabwidget.cpp  ui_mainwindow2.h  ui_mainwindow3.h  ui_mainwindow4.h  ui_tabwidget.h
rs485/: CMakeLists.txt  main.c
